--- a/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/Details.cshtml
@@ -1,147 +1,249 @@
 ﻿@model Portal_2_0.Models.orden_trabajo
+@using Bitacoras.Util;
 
 @{
-    ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Detalles de Solicitud de Órden de Trabajo";
+    ViewBag.PrimerNivel = "orden_trabajo";
+    ViewBag.SegundoNivel = "mis_solicitudes";
+    ViewBag.ControllerName = "OrdenesTrabajo";
+
+
 }
 
-<h2>Details</h2>
 
-<div>
-    <h4>orden_trabajo</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.fecha_solicitud)
-        </dt>
+@section estilos
+{
+   
 
-        <dd>
-            @Html.DisplayFor(model => model.fecha_solicitud)
-        </dd>
+    <style>
+        .text_derecha {
+            text-align: right;
+        }
+    </style>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.nivel_urgencia)
-        </dt>
+}
 
-        <dd>
-            @Html.DisplayFor(model => model.nivel_urgencia)
-        </dd>
+<div class="right_col" role="main">
+    <div class="">
+        <div class="page-title">
+            <div class="title_left">
+            </div>
+        </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.titulo)
-        </dt>
+        <div class="clearfix"></div>
 
-        <dd>
-            @Html.DisplayFor(model => model.titulo)
-        </dd>
+        <div class="row">
+            <div class="col-md-12 col-sm-12  ">
+                <div class="x_panel">
+                    @*<div class="x_title">
+                            <h2>@ViewBag.Title</h2>
+                            <div class="clearfix"></div>
+                        </div>*@
+                    <div class="x_content">
+                        <br />
 
-        <dt>
-            @Html.DisplayNameFor(model => model.descripcion)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.descripcion)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.fecha_asignacion)
-        </dt>
+                        <div class="form-group row">
+                            <div class="col-md-12" style="text-align:center">
+                                <h3 class="green"><i class="fa fa-paste"></i> &Oacute;rden de Trabajo</h3>
+                            </div>
+                        </div>
+                        <div class="ln_solid"></div>
 
-        <dd>
-            @Html.DisplayFor(model => model.fecha_asignacion)
-        </dd>
+                        <div class="form-group row">
+                            <span style="color:black"><b>ESTATUS</b></span>
+                        </div>
+                        <!-- Smart Wizard -->
+                        <div id="wizard" class="form_wizard wizard_horizontal">
+                            <ul class="wizard_steps">
+                                <li>
+                                    <a class="@(Model.estatus == OT_Status.ABIERTO ? "selected" : "done" )" isdone="1">
+                                        <span class="step_no">1</span>
+                                        <span class="step_descr" style="@(Model.estatus == OT_Status.ABIERTO ? "font-weight: bold" : "" )">
+                                            @OT_Status.DescripcionStatus(OT_Status.ABIERTO)
+                                        </span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="@(Model.estatus == OT_Status.ASIGNADO ? "selected" : Model.estatus == OT_Status.ABIERTO? "disabled":"done" )" isdone="2">
+                                        <span class="step_no">2</span>
+                                        <span class="step_descr" style="@(Model.estatus == OT_Status.ASIGNADO ? "font-weight: bold" : "" )">
+                                            @OT_Status.DescripcionStatus(OT_Status.ASIGNADO)
+                                        </span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="@(Model.estatus == OT_Status.EN_PROCESO ? "selected" : Model.estatus == OT_Status.ABIERTO || Model.estatus == OT_Status.ASIGNADO ? "disabled":"done" )" isdone="3">
+                                        <span class="step_no">3</span>
+                                        <span class="step_descr" style="@(Model.estatus == OT_Status.EN_PROCESO ? "font-weight: bold" : "" )">
+                                            @OT_Status.DescripcionStatus(OT_Status.EN_PROCESO)
+                                        </span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="@(Model.estatus == OT_Status.CERRADO ? "selected" : "disabled" )" isdone="4">
+                                        <span class="step_no">4</span>
+                                        <span class="step_descr" style="@(Model.estatus == OT_Status.CERRADO ? "font-weight: bold" : "" )">
+                                            @OT_Status.DescripcionStatus(OT_Status.CERRADO)
+                                        </span>
+                                    </a>
+                                </li>
+                            </ul>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.fecha_en_proceso)
-        </dt>
+                        </div>
+                        <!-- End SmartWizard Content -->
+                        <div class="ln_solid"></div>
+                        <div class="form-group row">
+                            <span style="color:black"><b>DATOS GENERALES</b></span>
+                        </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.fecha_en_proceso)
-        </dd>
+                        <div class="form-group row">
+                            @Html.LabelFor(model => model.id, new { @class = "control-label col-md-11 text_derecha" })
+                            <div class="col-md-1">
+                                <input type="text" class="form-control" value="@Model.id" readonly>
+                            </div>
+                        </div>
+                        <div class="ln_solid"></div>
+                        <div class="form-group row">
+                            <!--solicitante-->
+                            @Html.LabelFor(model => model.id_solicitante, new { @class = "control-label col-md-1 text_derecha" })
+                            <div class="col-md-4">
+                                <input type="text" class="form-control" value="@Model.empleados2.ConcatNombre" readonly>
+                            </div>
+                            <!-- Área -->
+                            @Html.LabelFor(model => model.id_area, new { @class = "control-label col-md-1 text_derecha" })
+                            <div class="col-md-3">
+                                <input type="text" class="form-control col-md-12 " value="@(Model.Area != null ? Model.Area.descripcion : "NO DISPONIBLE" )" readonly>
+                            </div>
+                            <!--Fecha solicitud-->
+                            @Html.LabelFor(model => model.fecha_solicitud, new { @class = "control-label col-md-1 text_derecha" })
+                            <div class="col-md-2">
+                                <input type="text" class="form-control " value="@Model.fecha_solicitud.ToString("yyyy-MM-dd")" readonly>
+                            </div>
+                        </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.fecha_cierre)
-        </dt>
+                        @if (Model.produccion_lineas != null)
+                        {
 
-        <dd>
-            @Html.DisplayFor(model => model.fecha_cierre)
-        </dd>
+                            <div class="form-group row">
+                                <!--id linea-->
+                                @Html.LabelFor(model => model.id_linea, new { @class = "control-label col-md-1 text_derecha" })
+                                <div class="col-md-4">
+                                    <input type="text" class="form-control " value="@Model.produccion_lineas.linea" readonly>
+                                </div>
+                            </div>
+                        }
 
-        <dt>
-            @Html.DisplayNameFor(model => model.estatus)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.estatus)
-        </dd>
+                        <div class="form-group row">
+                            <!--Titulo-->
+                            @Html.LabelFor(model => model.titulo, new { @class = "control-label col-md-1 text_derecha" })
+                            <div class="col-md-8">
+                                <input type="text" class="form-control " value="@Model.titulo" readonly>
+                            </div>
+                            <!--Urgencia-->
+                            @Html.LabelFor(model => model.nivel_urgencia, new { @class = "control-label col-md-1 text_derecha" })
+                            <div class="col-md-2">
+                                <input type="text" class="form-control " value="@Bitacoras.Util.OT_nivel_urgencia.DescripcionStatus(Model.nivel_urgencia)" readonly>
+                            </div>
+                        </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.comentario)
-        </dt>
+                        <div class="item form-group">
+                            @Html.LabelFor(model => model.descripcion, new { @class = "control-label col-md-12 col-sm-12", @style = "text-align:left" })
+                        </div>
+                        <div class="item form-group">
+                            <div class="col-md-12">
+                                @Html.TextAreaFor(model => model.descripcion, new { @class = "form-control", @rows = "4", @readonly = "readonly" })
+                            </div>
+                        </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.comentario)
-        </dd>
+                        <div class="ln_solid"></div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Area.descripcion)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Area.descripcion)
-        </dd>
+                        @if (Model != null && Model.id_documento_solicitud.HasValue)
+                        {
+                            <div class="form-group row">
+                                <span style="color:black"><b>DOCUMENTOS SOPORTE</b></span>
+                            </div>
+                            <div class="form-group row" id="div_document_support_info">
+                                @Html.LabelFor(model => model.id_documento_solicitud, new { @class = "control-label col-md-2" })
+                                <div class="col-md-7">
+                                    <input type="text" class="form-control col-md-12" style="text-align: right;" value="@Model.biblioteca_digital1.Nombre" readonly>
+                                </div>
+                                <div class="col-md-3">
+                                    <a href="@Url.Action("DownloadFile","Combos", new { idDocumento = Model.id_documento_solicitud})" class="btn btn-success btm-sm" title="Download">
+                                        <i class="fa fa-download"></i>
+                                    </a>
+                                    <a href="@Url.Action("DownloadFile","Combos", new { idDocumento = Model.id_documento_solicitud, inline=true})" class="btn btn-info btm-sm" target="_blank" title="Inline">
+                                        <i class="fa fa-eye"></i>
+                                    </a>
+                                </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.biblioteca_digital.Nombre)
-        </dt>
+                            </div>
+                            <div class="ln_solid"></div>
+                        }
 
-        <dd>
-            @Html.DisplayFor(model => model.biblioteca_digital.Nombre)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.biblioteca_digital1.Nombre)
-        </dt>
+                        <div class="form-group row">
+                            <span style="color:black"><b>ASIGNACI&Oacute;N</b></span>
+                        </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.biblioteca_digital1.Nombre)
-        </dd>
+                        <div class="form-group row">
+                            <!-- Responsable -->
+                            @Html.LabelFor(model => model.id_responsable, new { @class = "control-label col-md-1 text_derecha" })
 
-        <dt>
-            @Html.DisplayNameFor(model => model.empleados.numeroEmpleado)
-        </dt>
+                            @if (Model.id_responsable.HasValue && Model.empleados1!=null)
+                            {
+                                <input type="text" class="form-control col-md-5" value="@Model.empleados1.ConcatNombre" readonly>
+                            }
+                            else
+                            {
+                                <input type="text" class="form-control col-md-5" value="PENDIENTE" readonly>
+                            }
+                            <!-- Fecha asignación -->
+                            @Html.LabelFor(model => model.fecha_asignacion, new { @class = "control-label col-md-2 text_derecha" })
 
-        <dd>
-            @Html.DisplayFor(model => model.empleados.numeroEmpleado)
-        </dd>
+                            <div class="col-md-4">
+                                @if (Model.fecha_asignacion.HasValue)
+                                {
+                                    <input type="text" class="form-control col-md-12" value="@Model.fecha_asignacion.Value" readonly>
+                                }                               
+                                else
+                                {
+                                    <input type="text" class="form-control col-md-12" value="PENDIENTE" readonly>
+                                }
+                            </div>
+                        </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.empleados1.numeroEmpleado)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.empleados1.numeroEmpleado)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.empleados2.numeroEmpleado)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.empleados2.numeroEmpleado)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.produccion_lineas.linea)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.produccion_lineas.linea)
-        </dd>
-
-    </dl>
+                    </div>
+                </div>
+                <div>
+                    <br />
+                    <a onclick="volverAtras()" class="btn btn-round btn-info btm-sm float-right" title="Volver" style="color:white">
+                        <i class="fa fa-arrow-circle-left"></i> Volver
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
+
+@section Scripts {
+  
+    <script>
+        $(document).ready(function () {
+
+        
+
+        });
+
+
+        window.onload = function () {
+            clicMenu(1);
+        }
+    </script>
+}
+
