--- a/CódigoFuente/BitacorasProduccion/Views/PolizaManual/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PolizaManual/Edit.cshtml
@@ -168,6 +168,9 @@
                                 <table id="datatable_1" class="table table-striped table-bordered " cellspacing="0" width="100%">
                                     <thead>
                                         <tr style=" background-color: #0094ff; color: azure;">
+                                            <th width="1%">
+                                                #
+                                            </th>
                                             <th width="12%">
                                                 Cuenta
                                             </th>
@@ -196,38 +199,38 @@
 
                                         @foreach (Portal_2_0.Models.PM_conceptos item in Model.PM_conceptos)
                                         {
-                                            <tr id="div_concepto_@contador">
-                                                <input type="hidden" name="PM_conceptos.Index" id="produccion_lotes.Index" value="@contador" />
-                                                <input type="hidden" name="PM_conceptos[@contador].id_poliza" id="PM_conceptos[@contador].id_poliza" value="@item.id_poliza" />
-
-                                                <td>
-                                                    <input style=" font-size: 12px;" type="text" name="PM_conceptos[@contador].cuenta" id="PM_conceptos[@contador].cuenta" class="form-control col-md-12" value="@item.cuenta" maxlength="15" autocomplete="off" required>
-                                                    <span class="field-validation-valid text-danger" data-valmsg-for="PM_conceptos[@contador].cuenta" data-valmsg-replace="true"></span>
-                                                </td>
-                                                <td>
-                                                    <input style=" font-size: 12px;" type="text" name="PM_conceptos[@contador].cc" id="PM_conceptos[@contador].cc" class="form-control col-md-12" value="@item.cc" maxlength="15" autocomplete="off">
-                                                    <span class="field-validation-valid text-danger" data-valmsg-for="PM_conceptos[@contador].cc" data-valmsg-replace="true"></span>
-                                                </td>
-                                                <td>
-                                                    <textarea style="font-size: 12px;" type="text" name="PM_conceptos[@contador].concepto" id="PM_conceptos[@contador].concepto" class="form-control col-md-12" autocomplete="off" maxlength="120" required>@item.concepto</textarea>
-                                                    <span class="field-validation-valid text-danger" data-valmsg-for="PM_conceptos[@contador].concepto" data-valmsg-replace="true"></span>
-                                                </td>
-                                                <td>
-                                                    <input style=" font-size: 12px;" type="text" name="PM_conceptos[@contador].poliza" id="PM_conceptos[@contador].poliza" class="form-control col-md-12" value="@item.poliza" autocomplete="off" maxlength="10">
-                                                    <span class="field-validation-valid text-danger" data-valmsg-for="PM_conceptos[@contador].poliza" data-valmsg-replace="true"></span>
-                                                </td>
-                                                <td>
-                                                    <input style="text-align:right; font-size: 12px;" type="number" step="0.01" min="0" name="PM_conceptos[@contador].debe" id="PM_conceptos[@contador].debe" class="form-control col-md-12 debe" value="@item.debe" autocomplete="off">
-                                                    <span class="field-validation-valid text-danger" data-valmsg-for="PM_conceptos[@contador].debe" data-valmsg-replace="true"></span>
-                                                </td>
-                                                <td>
-                                                    <input style="text-align:right; font-size: 12px;" type="number" step="0.01" min="0" name="PM_conceptos[@contador].haber" id="PM_conceptos[@contador].haber" class="form-control col-md-12 haber" value="@item.haber" autocomplete="off">
-                                                    <span class="field-validation-valid text-danger" data-valmsg-for="PM_conceptos[@contador].haber" data-valmsg-replace="true"></span>
-                                                </td>
-                                                <td>
-                                                    <input type="button" value="Borrar" class="btn btn-danger" onclick="borrarConcepto(@contador); return false;">
-                                                </td>
-                                            </tr>
+                                        <tr id="div_concepto_@contador">
+                                            <input type="hidden" name="PM_conceptos.Index" id="produccion_lotes.Index" value="@contador" />
+                                            <input type="hidden" name="PM_conceptos[@contador].id_poliza" id="PM_conceptos[@contador].id_poliza" value="@item.id_poliza" />
+                                            <td class="input-contador-conceptos"></td>
+                                            <td>
+                                                <input style=" font-size: 12px;" type="text" name="PM_conceptos[@contador].cuenta" id="PM_conceptos[@contador].cuenta" class="form-control col-md-12" value="@item.cuenta" maxlength="15" autocomplete="off" required>
+                                                <span class="field-validation-valid text-danger" data-valmsg-for="PM_conceptos[@contador].cuenta" data-valmsg-replace="true"></span>
+                                            </td>
+                                            <td>
+                                                <input style=" font-size: 12px;" type="text" name="PM_conceptos[@contador].cc" id="PM_conceptos[@contador].cc" class="form-control col-md-12" value="@item.cc" maxlength="15" autocomplete="off">
+                                                <span class="field-validation-valid text-danger" data-valmsg-for="PM_conceptos[@contador].cc" data-valmsg-replace="true"></span>
+                                            </td>
+                                            <td>
+                                                <textarea style="font-size: 12px;" type="text" name="PM_conceptos[@contador].concepto" id="PM_conceptos[@contador].concepto" class="form-control col-md-12" autocomplete="off" maxlength="120" required>@item.concepto</textarea>
+                                                <span class="field-validation-valid text-danger" data-valmsg-for="PM_conceptos[@contador].concepto" data-valmsg-replace="true"></span>
+                                            </td>
+                                            <td>
+                                                <input style=" font-size: 12px;" type="text" name="PM_conceptos[@contador].poliza" id="PM_conceptos[@contador].poliza" class="form-control col-md-12" value="@item.poliza" autocomplete="off" maxlength="10">
+                                                <span class="field-validation-valid text-danger" data-valmsg-for="PM_conceptos[@contador].poliza" data-valmsg-replace="true"></span>
+                                            </td>
+                                            <td>
+                                                <input style="text-align:right; font-size: 12px;" type="number" step="0.01" min="0" name="PM_conceptos[@contador].debe" id="PM_conceptos[@contador].debe" class="form-control col-md-12 debe" value="@item.debe" autocomplete="off">
+                                                <span class="field-validation-valid text-danger" data-valmsg-for="PM_conceptos[@contador].debe" data-valmsg-replace="true"></span>
+                                            </td>
+                                            <td>
+                                                <input style="text-align:right; font-size: 12px;" type="number" step="0.01" min="0" name="PM_conceptos[@contador].haber" id="PM_conceptos[@contador].haber" class="form-control col-md-12 haber" value="@item.haber" autocomplete="off">
+                                                <span class="field-validation-valid text-danger" data-valmsg-for="PM_conceptos[@contador].haber" data-valmsg-replace="true"></span>
+                                            </td>
+                                            <td>
+                                                <input type="button" value="Borrar" class="btn btn-danger" onclick="borrarConcepto(@contador); return false;">
+                                            </td>
+                                        </tr>
 
                                             contador++;
                                         }
@@ -237,7 +240,7 @@
 
                                     <tfoot>
                                         <tr>
-                                            <th colspan="4" style="text-align:right">Sumas Iguales</th>
+                                            <th colspan="5" style="text-align:right">Sumas Iguales</th>
                                             <th id="total_debe" style="text-align:right">$ 0.00</th>
                                             <th id="total_haber" style="text-align:right">$ 0.00</th>
                                             <th></th>
@@ -510,6 +513,7 @@
                 document.getElementById('cambio_documento_soporte').value = ++documento_soporte_cambios;
             });
 
+            AsignaNumeroConcepto()
 
         });
 
@@ -542,16 +546,21 @@
             let total_debe = ObtieneTotalDebe();
             let total_haber = ObtieneTotalHaber();
 
+            //redondea a dos decimales
+            total_debe = total_debe.toFixed(2);
+            total_haber = total_haber.toFixed(2);
+
+
             //asigna el valor de total debe
             if (total_debe != null) {
-                $("#total_debe").html("$ " + total_debe.toFixed(2));
+                $("#total_debe").html("$ " + total_debe);
             } else {
                 $("#total_debe").html("$ 0.00");
             }
 
             //asigna el valor de total haber
             if (total_haber != null) {
-                $("#total_haber").html("$ " + total_haber.toFixed(2));
+                $("#total_haber").html("$ " + total_haber);
             } else {
                 $("#total_haber").html("$ 0.00");
             }
@@ -636,6 +645,7 @@
                 `
                                         <tr  id="div_concepto_`+ num + `">
                                             <input type="hidden" name="PM_conceptos.Index" id="produccion_lotes.Index" value="`+ num + `" />
+                                            <td class="input-contador-conceptos"></td>
                                             <input type="hidden" name="PM_conceptos[`+ num + `].id_poliza" id="PM_conceptos[` + num + `].id_poliza" value="@Model.id" />
                                                 <td>
                                                     <input style=" font-size: 12px;" type="text" name="PM_conceptos[`+ num + `].cuenta" id="PM_conceptos[` + num + `].cuenta" class="form-control col-md-12" value="" autocomplete="off"  required>
@@ -673,7 +683,7 @@
             num++;
 
             asignaEventosInput();
-
+            AsignaNumeroConcepto()
 
         }
 
@@ -684,7 +694,18 @@
                 $(this).remove();
             });
 
+            AsignaNumeroConcepto()
             calculaDatos()
+        }
+
+        //numera los concepto
+        function AsignaNumeroConcepto() {
+            let indice = 1;
+
+            $('.input-contador-conceptos').each(function (index) {
+                $(this).html(indice);
+                indice++;
+            });
         }
 
         window.onload = function () {
