--- a/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/DetailsActual.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/DetailsActual.cshtml
@@ -1,5 +1,5 @@
-﻿@model IEnumerable<Portal_2_0.Models.budget_valores>
-    @using Bitacoras.Util
+﻿@model IEnumerable<Portal_2_0.Models.view_valores_anio_fiscal>
+@using Bitacoras.Util
 
 @{
     Portal_2_0.Models.budget_rel_anio_fiscal_centro rel_anio_centro = (Portal_2_0.Models.budget_rel_anio_fiscal_centro)ViewBag.Anio_Centro;
@@ -20,11 +20,16 @@
 
     <!-- SweetAlert2 -->
     <link href="@Url.Content("~/Content/vendors/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css")" rel="stylesheet">
-
+    <!--fixed columns css-->
+    <link href="@Url.Content("~/Content/vendors/datatables.net-fixedcolumns/dataTables.fixedColumns.css")" rel="stylesheet">
     <style>
         .text_derecha {
             text-align: right;
         }
+        /* Ensure that the demo table scrolls */
+        th, td {
+            white-space: nowrap;
+        }       
     </style>
 }
 
@@ -41,11 +46,6 @@
 
 <div class="right_col" role="main">
     <div class="">
-        @*<div class="page-title">
-                <div class="title_left">
-                    <h3>@ViewBag.ControllerName</h3>
-                </div>
-            </div>*@
 
         <div class="clearfix"></div>
 
@@ -69,9 +69,9 @@
                                 <div class="card-box">
                                     <div class="form-group">
                                         @*<a href="@Url.Action("Create", ViewBag.ControllerName)" class="btn btn-success">
-                <i class="fa fa-plus-square"></i>
-                Crear nuevo
-            </a>*@
+                                                <i class="fa fa-plus-square"></i>
+                                                Crear nuevo
+                                            </a>*@
                                     </div>
 
                                     <div class="form-group row">
@@ -100,12 +100,13 @@
                                         </div>
 
                                     </div>
+                                    <div class="ln_solid"></div>
 
                                     <div class="form-group row">
 
                                         <table id="datatable_1" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%">
-                                            <thead>
-                                                <tr>
+                                            <thead >
+                                                <tr style=" background-color: #0094ff; color: azure;" !important> 
                                                     <th>
                                                         Item
                                                     </th>
@@ -156,30 +157,122 @@
                                                     <th>
                                                         ACT @MesesUtil.SEPTIEMBRE.Abreviation-@rel_anio_centro.budget_anio_fiscal.anio_fin.ToString().Substring(2, 2)
                                                     </th>
-
+                                                    <th>
+                                                        Totals
+                                                    </th>
+                                                    <th>
+                                                        Comentarios
+                                                    </th>
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                                @foreach(var item in Model)
+                                                @foreach (var item in Model)
                                                 {
-                                                <tr>
-                                                    <td>
-                                                        345
-                                                    </td>
-                                                    <td>
-                                                        5
-                                                    </td>
-                                                    <td>
-                                                        56
-                                                    </td>
-                                                    <td>
-                                                        745
-                                                    </td>
-                                                   
-                                                </tr>
+                                                    <tr>
+                                                        <td>
+                                                            @fila
+                                                        </td>
+                                                        <td>
+                                                            @item.CuentaSap().sap_account
+                                                        </td>
+                                                        <td>
+                                                            @item.CuentaSap().name
+                                                        </td>
+                                                        <td>
+                                                            @item.CuentaSap().budget_mapping.budget_mapping_bridge.descripcion
+                                                        </td>
+                                                        <td class="text_derecha">
+                                                            @if (item.Octubre.HasValue)
+                                                            {<span>$</span>}
+                                                            @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.Octubre)
+                                                        </td>
+                                                        <td class="text_derecha">
+                                                            @if (item.Noviembre.HasValue)
+                                                            {<span>$</span>}
+                                                            @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.Noviembre)
+                                                        </td>
+                                                        <td class="text_derecha">
+                                                            @if (item.Diciembre.HasValue)
+                                                            {<span>$</span>}
+                                                            @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.Diciembre)
+                                                        </td>
+                                                        <td class="text_derecha">
+                                                            @if (item.Enero.HasValue)
+                                                            {<span>$</span>}
+                                                            @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.Enero)
+                                                        </td>
+                                                        <td class="text_derecha">
+                                                            @if (item.Febrero.HasValue)
+                                                            {<span>$</span>}
+                                                            @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.Febrero)
+                                                        </td>
+                                                        <td class="text_derecha">
+                                                            @if (item.Marzo.HasValue)
+                                                            {<span>$</span>}
+                                                            @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.Marzo)
+                                                        </td>
+                                                        <td class="text_derecha">
+                                                            @if (item.Abril.HasValue)
+                                                            {<span>$</span>}
+                                                            @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.Abril)
+                                                        </td>
+                                                        <td class="text_derecha">
+                                                            @if (item.Mayo.HasValue)
+                                                            {<span>$</span>}
+                                                            @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.Mayo)
+                                                        </td>
+                                                        <td class="text_derecha">
+                                                            @if (item.Junio.HasValue)
+                                                            {<span>$</span>}
+                                                            @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.Junio)
+                                                        </td>
+                                                        <td class="text_derecha">
+                                                            @if (item.Julio.HasValue)
+                                                            {<span>$</span>}
+                                                            @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.Julio)
+                                                        </td>
+                                                        <td class="text_derecha">
+                                                            @if (item.Agosto.HasValue)
+                                                            {<span>$</span>}
+                                                            @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.Agosto)
+                                                        </td>
+                                                        <td class="text_derecha">
+                                                            @if (item.Septiembre.HasValue)
+                                                            {<span>$</span>}
+                                                            @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.Septiembre)
+                                                        </td>
+                                                        <td class="text_derecha" style="background-color:#d4f2fc; font-weight: bold;">
+                                                            $ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.TotalMeses().Value)
+                                                        </td>
+                                                        <td>
+                                                            @item.Comentario
+                                                        </td>
+                                                    </tr>
 
+                                                    fila++;
                                                 }
+                                                <tr style="font-weight: bold;">
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td style="background-color: #d4f2fc" >Totals</td>
+                                                    <td style="background-color: #d4f2fc"  class="text_derecha">$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.Sum(item => item.Octubre))</td>
+                                                    <td style="background-color: #d4f2fc"  class="text_derecha">$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.Sum(item => item.Noviembre))</td>
+                                                    <td style="background-color: #d4f2fc"  class="text_derecha">$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.Sum(item => item.Diciembre))</td>
+                                                    <td style="background-color: #d4f2fc"  class="text_derecha">$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.Sum(item => item.Enero))</td>
+                                                    <td style="background-color: #d4f2fc"  class="text_derecha">$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.Sum(item => item.Febrero))</td>
+                                                    <td style="background-color: #d4f2fc"  class="text_derecha">$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.Sum(item => item.Marzo))</td>
+                                                    <td style="background-color: #d4f2fc"  class="text_derecha">$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.Sum(item => item.Abril))</td>
+                                                    <td style="background-color: #d4f2fc"  class="text_derecha">$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.Sum(item => item.Mayo))</td>
+                                                    <td style="background-color: #d4f2fc"  class="text_derecha">$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.Sum(item => item.Junio))</td>
+                                                    <td style="background-color: #d4f2fc"  class="text_derecha">$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.Sum(item => item.Julio))</td>
+                                                    <td style="background-color: #d4f2fc"  class="text_derecha">$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.Sum(item => item.Agosto))</td>
+                                                    <td style="background-color: #d4f2fc"  class="text_derecha">$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.Sum(item => item.Septiembre))</td>
+                                                    <td style="background-color: #d4f2fc"  class="text_derecha">$ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", Model.Sum(item => item.TotalMeses()))</td>
+                                                    <td></td>
+                                                </tr>
                                             </tbody>
+
                                         </table>
                                     </div>
 
@@ -197,7 +290,6 @@
     <!-- SweetAlert2 -->
     @Scripts.Render(Url.Content("~/Content/vendors/sweetalert2/sweetalert2.min.js"))
     @Scripts.Render(Url.Content("~/Scripts/AlertasSweetAlert.js"))
-
     @Scripts.Render("~/bundles/dataTables_js")
 
     <script>
@@ -210,7 +302,10 @@
                 "searching": false,
                 "scrollX": true,
                 "scrollY": true,
-                "info": false
+                "info": false,
+                fixedColumns: {
+                    left: 4
+                }
             });
 
           
