--- a/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/Forecast.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/Forecast.cshtml
@@ -1,9 +1,9 @@
 ﻿@model IEnumerable<Portal_2_0.Models.budget_centro_costo>
 
 @{
-    ViewBag.Title = "Listado de Centros de Costo - Actual";
+    ViewBag.Title = "Listado de Centros de Costo - Forecast";
     ViewBag.PrimerNivel = "plantilla_budget";
-    ViewBag.SegundoNivel = "actual";
+    ViewBag.SegundoNivel = "forecast";
     ViewBag.ControllerName = "ResponsableBudget";
 
     Clases.Util.MensajesSweetAlert mensajeAlerta = (Clases.Util.MensajesSweetAlert)ViewBag.MensajeAlert;
@@ -31,10 +31,10 @@
 <div class="right_col" role="main">
     <div class="">
         @*<div class="page-title">
-            <div class="title_left">
-                <h3>@ViewBag.ControllerName</h3>
-            </div>
-        </div>*@
+                <div class="title_left">
+                    <h3>@ViewBag.ControllerName</h3>
+                </div>
+            </div>*@
 
         <div class="clearfix"></div>
 
@@ -58,9 +58,9 @@
                                 <div class="card-box table-responsive">
                                     <div class="form-group">
                                         @*<a href="@Url.Action("Create", ViewBag.ControllerName)" class="btn btn-success">
-                                            <i class="fa fa-plus-square"></i>
-                                            Crear nuevo
-                                        </a>*@
+                                                <i class="fa fa-plus-square"></i>
+                                                Crear nuevo
+                                            </a>*@
                                     </div>
                                     <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
                                         <thead>
@@ -87,28 +87,28 @@
 
                                             @foreach (var item in Model)
                                             {
-                                            <tr>
-                                                <td>
-                                                    @fila
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.num_centro_costo)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.Area.plantas.descripcion)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.Area.descripcion)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.empleados.ConcatNombre)
-                                                </td>
-                                                <td>
-                                                    <a href="@Url.Action("DetailsActual", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info btm-sm" title="Detalles">
-                                                        <i class="fa fa-info-circle"></i>
-                                                    </a>
-                                                </td>
-                                            </tr>
+                                                <tr>
+                                                    <td>
+                                                        @fila
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.num_centro_costo)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.Area.plantas.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.Area.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.empleados.ConcatNombre)
+                                                    </td>
+                                                    <td>
+                                                        <a href="@Url.Action("EditForecast", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info btm-sm" title="Detalles">
+                                                            <i class="fa fa-info-circle"></i>
+                                                        </a>
+                                                    </td>
+                                                </tr>
 
                                                 fila++;
                                             }
