2022-03-04 Se agregan catálogos a plantilla budget

--- a/CódigoFuente/BitacorasProduccion/Views/PM_tipo_poliza/Disable.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PM_tipo_poliza/Disable.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Portal_2_0.Models.PM_tipo_poliza
 
 @{
-    ViewBag.Title = "Dehabilitar Tipo de Póliza";
+    ViewBag.Title = "Deshabilitar Tipo de Póliza";
     ViewBag.PrimerNivel = "polizas_manuales";
     ViewBag.SegundoNivel = "PM_catalogos";
     ViewBag.TercelNivel = "PM_tipo_poliza";
