--- a/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/Forecast.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/Forecast.cshtml
@@ -104,8 +104,8 @@
                                                         @Html.DisplayFor(modelItem => item.empleados.ConcatNombre)
                                                     </td>
                                                     <td>
-                                                        <a href="@Url.Action("EditForecast", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info btm-sm" title="Detalles">
-                                                            <i class="fa fa-info-circle"></i>
+                                                        <a href="@Url.Action("EditForecast", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btn-sm" title="Detalles">
+                                                            <i class="fa fa-pencil-square-o"></i>
                                                         </a>
                                                     </td>
                                                 </tr>
